# kvs_old

./: README.md
lib/include/kvs/: kvs.h
lib/src/: kvs.c
tst/zephyr/: CMakeLists.txt  Kconfig  prj.conf
tst/zephyr/src/: main.c
zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/dts/bindings/misc/: zephyr,kvs-eeprom.yaml  zephyr,kvs-flash.yaml
zephyr/include/zephyr/subsys/: kvs.h
zephyr/sample/: CMakeLists.txt  README.rst  prj.conf
zephyr/sample/boards/: qemu_x86.overlay
zephyr/sample/src/: main.c
zephyr/subsys/: CMakeLists.txt  Kconfig
zephyr/subsys/kvs/: CMakeLists.txt  Kconfig  kvs_backend_eeprom.c  kvs_backend_flash.c
zephyr/tests/flash/: CMakeLists.txt  prj.conf
zephyr/tests/flash/boards/: nucleo_f411re.overlay  qemu_x86.conf  qemu_x86.overlay
zephyr/tests/flash/src/: main.c
